--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,9 +4,7 @@ Flask-SQLAlchemy==3.0.5
 Flask-CORS==3.0.10
 
 # --- Authentication & Security ---
-# Flask-Security-Too[jwt] installs PyJWT for token support
-Flask-Security-Too==5.3.2
-bcrypt==4.0.1
+Flask-Login==0.6.3
 
 # --- API ---
 Flask-RESTful==0.3.10
