--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ Flask-CORS==3.0.10
 
 # --- Authentication & Security ---
 Flask-Login==0.6.3
+Flask-JWT-Extended==4.4.4
 
 # --- API ---
 Flask-RESTful==0.3.10
