--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "react": "^19.2.0",
-    "react-beautiful-dnd": "^13.1.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.24.0",
     "web-vitals": "^2.1.4"
